# automated-research-report-generation

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  get_lib_versions.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROJECT_FILES.md
research_and_analyst/api/: main.py
research_and_analyst/api/models/: request_models.py
research_and_analyst/api/routes/: report_routes.py
research_and_analyst/api/services/: report_service.py
research_and_analyst/database/: db_config.py
research_and_analyst/exception/: custom_exception.py
research_and_analyst/logger/: __init__.py
research_and_analyst/notebook/: research_automation.py  test.ipynb  test.py
research_and_analyst/prompt_lib/: prompt_locator.py
research_and_analyst/schemas/: models.py
research_and_analyst/utils/: config_loader.py  model_loader.py
research_and_analyst/workflows/: interview_workflow.py  report_generator_workflow.py
tests/: conftest.py  test_api.py  test_config.py  test_exception.py  test_logger.py  test_models.py
